Add password protection gate with password 'trustcarkronic'

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 
             if (password === 'trustcarkronic') {
                 // Redirect to your actual homepage
-                window.location.href = 'real-homepage.html';
+                window.location.href = 'your-actual-homepage.html';
             } else {
                 errorEl.textContent = 'Incorrect password';
             }
