Add shared client-side auth gate to all pages

--- a/public/admin.html
+++ b/public/admin.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Admin — TrustCar</title>
+  <script defer src="/auth.js"></script>
   <style>
     body{font-family:Nunito,system-ui,Arial,sans-serif;background:#f5f8fa;color:#0b1724;margin:0}
     header{background:#0553F0;color:#fff;padding:1rem}
