--- a/public/reports/preview.html
+++ b/public/reports/preview.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Report Preview</title>
   <style>body{font-family:Nunito,system-ui,Arial,sans-serif;padding:1.25rem;color:#0b1724}h1{color:#0553F0}</style>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <script defer src="/auth.js"></script>
 </head>
 <body>
   <div id="root"><h1>Loading...</h1></div>
