--- a/public/test-queue.html
+++ b/public/test-queue.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Queue Test</title>
+    <script defer src="/auth.js"></script>
 </head>
 <body>
     <h1>Testing Queue API</h1>
