--- a/public/enter-vin.html
+++ b/public/enter-vin.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Enter VIN — TrustCar.io</title>
+    <meta name="description" content="Decode vehicle VIN numbers with TrustCar.io. Get instant safety ratings, recall information, and vehicle specifications from NHTSA data.">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <style>
         body { margin: 0; padding: 0; font-family: 'Nunito', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; background: #f5f8fa; color: #0b1724; }
@@ -56,6 +58,14 @@
         .comps-table th, .comps-table td { text-align:left; padding:.5rem; border-bottom:1px solid #eef2f7; font-size:.95rem; }
         .comps-table th { color:#64748b; text-transform:uppercase; letter-spacing:.4px; font-size:.8rem; }
         .comps-scroll { overflow-x:auto; margin-top:.5rem; -webkit-overflow-scrolling: touch; }
+        @media (max-width: 992px) {
+            header { flex-wrap: wrap; }
+            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(4, 65, 199, 0.98); padding: 1rem; border-radius: 12px; margin-top: .5rem; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+            nav.open { display: flex; }
+            nav a, nav a.nav-link { margin-left: 0; padding: 0.75rem 1rem; min-height: 44px; display: flex; align-items: center; border-radius: 8px; transition: background 0.2s; }
+            nav a:hover, nav a:focus { background: rgba(255,255,255,0.15); }
+            .menu-toggle { display: inline-flex; min-height: 44px; min-width: 44px; }
+        }
         @media (max-width:720px){ .comps-table { min-width: 600px; } }
     </style>
 </head>
