--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrustCar.io — Buy Smart, Drive Confident</title>
+    <meta name="description" content="TrustCar.io provides AI-powered vehicle inspections for transparent used-car purchases, starting at $49. 95%+ accuracy, instant results, fraud detection included.">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; }
@@ -46,10 +48,11 @@
             .hero-card { flex-direction: column-reverse; padding: 2rem; }
             .hero-content { width: 100%; }
             header { flex-wrap: wrap; }
-            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(255,255,255,0.08); padding: 1rem; border-radius: 12px; margin-top: .5rem; }
+            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(4, 65, 199, 0.98); padding: 1rem; border-radius: 12px; margin-top: .5rem; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
             nav.open { display: flex; }
-            nav a { margin-left: 0; }
-            .menu-toggle { display: inline-flex; }
+            nav a { margin-left: 0; padding: 0.75rem 1rem; min-height: 44px; display: flex; align-items: center; border-radius: 8px; transition: background 0.2s; }
+            nav a:hover, nav a:focus { background: rgba(255,255,255,0.15); }
+            .menu-toggle { display: inline-flex; min-height: 44px; min-width: 44px; }
         }
         @media (max-width: 480px) {
             .hero h1 { font-size: 2.4rem; }
@@ -72,6 +75,13 @@
 
     <section class="hero">
         <div class="hero-content">
+            <div style="background:linear-gradient(135deg,#fef3c7,#fde68a);border:2px solid #f59e0b;border-radius:12px;padding:1rem 1.5rem;margin-bottom:1.5rem;text-align:center;">
+                <div style="font-size:1.5rem;margin-bottom:.5rem;">🚀</div>
+                <h3 style="margin:0 0 .5rem;color:#78350f;font-size:1.1rem;">Dealer Network Launching Soon!</h3>
+                <p style="color:#92400e;margin:0;font-size:.9rem;">
+                    We're onboarding certified dealers nationwide. <a href="/dealers.html" style="color:#0553F0;font-weight:700;">Learn more</a>
+                </p>
+            </div>
             <div style="display:inline-block;background:#10b981;color:white;padding:.4rem 1rem;border-radius:999px;font-size:.85rem;font-weight:700;margin-bottom:1rem;">95%+ AI Accuracy • No Mechanic Visit Needed</div>
             <h1>Buy Smart, Drive Confident</h1>
             <p>10-minute smartphone inspection with AI damage detection — starting at $49</p>
