--- a/public/pricing.html
+++ b/public/pricing.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing — TrustCar.io</title>
+    <meta name="description" content="TrustCar.io inspection pricing: Basic $49, Standard $149, Premium $299. AI-powered vehicle inspections with 360° damage mapping and fraud detection.">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; }
@@ -44,10 +46,11 @@
         @media (max-width: 768px) {
             .pricing-grid { grid-template-columns: 1fr; }
             header { flex-wrap: wrap; }
-            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(255,255,255,0.08); padding: 1rem; border-radius: 12px; margin-top: .5rem; }
+            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(4, 65, 199, 0.98); padding: 1rem; border-radius: 12px; margin-top: .5rem; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
             nav.open { display: flex; }
-            nav a { margin-left: 0; }
-            .menu-toggle { display: inline-flex; }
+            nav a { margin-left: 0; padding: 0.75rem 1rem; min-height: 44px; display: flex; align-items: center; border-radius: 8px; transition: background 0.2s; }
+            nav a:hover, nav a:focus { background: rgba(255,255,255,0.15); }
+            .menu-toggle { display: inline-flex; min-height: 44px; min-width: 44px; }
         }
     </style>
 </head>
